@@ -20,6 +20,48 @@ You may, optionally, add the CAS Login portlet. Alternatively, you may simply
 let users log in using the 'Log in' link at the upper-right of the Plone
 window, as this is CAS-enabled.
 
+plone.app.registry Configuration
+================================
+
+collective.castle uses plone.app.registry for maintaining values and as such,
+GenericSetup can be used to import and export configuration. When values change
+within settings in the registry, an event is fired such that the CAS4PAS plugin
+and its settings are updated accordingly. For this reason, only modify 
+settings on your CAS plugin  
+
+Example GenericSetup import configuration
+----------------------------
+
+One GenericSetup import configuration profile looks like so within a
+`profiles/default/registry.xml` (or similar) file::
+
+    <registry>
+      <record field="login_url" interface="collective.castle.interfaces.ICAS4PASPluginSchema" name="collective.castle.interfaces.ICAS4PASPluginSchema.login_url">
+        <value>https://cas.secure.localhost/cas/login</value>
+      </record>
+      <record field="logout_url" interface="collective.castle.interfaces.ICAS4PASPluginSchema" name="collective.castle.interfaces.ICAS4PASPluginSchema.logout_url">
+        <value>https://cas.secure.localhost/cas/logout</value>
+      </record>
+      <record field="session_var" interface="collective.castle.interfaces.ICAS4PASPluginSchema" name="collective.castle.interfaces.ICAS4PASPluginSchema.session_var">
+        <value>__ac</value>
+      </record>
+      <record field="validate_url" interface="collective.castle.interfaces.ICAS4PASPluginSchema" name="collective.castle.interfaces.ICAS4PASPluginSchema.validate_url">
+        <value>https://cas.secure.localhost/cas/validate</value>
+      </record>
+    </registry>    
+
+which can be placed into a policy product or similar for configuration. If 
+doing so, ensure the given product's generic setup profile specifies 
+collective.castle as a dependency in its `metadata.xml`::
+
+    <?xml version="1.0"?>
+    <metadata>
+      <dependencies>
+       <dependency>profile-collective.castle:default</dependency>
+     </dependencies>
+    </metadata>
+
+    
 
 Credits
 =======
