@@ -3,5 +3,8 @@
   <description>
     Installs Plone UI for CAS authentication support through Products.CAS4PAS.
   </description>
-  <version>3</version>
+  <version>4</version>
+  <dependencies>
+    <dependency>profile-plone.app.registry:default</dependency>
+ </dependencies>
 </metadata>
