@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<registry>
+ <records interface="collective.castle.interfaces.ICAS4PASPluginSchema" />
+</registry>
+
